= natour Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning^].

== Unreleased

=== Added

- Support species lists from Vogelführer Birdlife Schweiz

=== Fixed

- Prevent conversion from being aborted if a built-in date/time attribute is missing

== 0.6.0 - 2021-11-20

=== Fixed

- Support GPX files containing only mandatory elements (i.e. no extensions)
- Consider also the image dimensions to determine the orientation, even if the tag is present

== 0.5.0 - 2021-08-16

=== Added

- Reflect the date of the last update in the revision date
- Add captions to species lists in the AsciiDoc output
- Group species lists by taxonomic groups in the AsciiDoc output

=== Fixed

- Support species lists of Flora Helvetica exported from Favoriten
- Consider botanical names with the authority name preceding the subspecies

== 0.4.0 - 2021-05-02

=== Added

- Show date/time of images in draft output
- Support preferred conversion backend for draft output

=== Changed

- Remove redundant method `Image.portrait?`

== 0.3.0 - 2021-03-07

=== Changed

- Sort the reports according to their GPS track
- Bump minimum required Ruby version to 2.5
- Change font in PDF output to support ♀ and ♂ symbols

=== Fixed

- Make source code compatible with Ruby version 2.5

== 0.2.0 - 2021-01-24

=== Added

- Add this gem's name to the footer of the PDF output
- Support species lists from https://www.ornitho.ch/[ornitho.ch^] (KML format only)
- Classify species lists by taxonomic groups (i.e. `SpeciesList.group`)

=== Changed

- Change `SpeciesList.name` to `SpeciesList.title`
- Return an empty array from `SpeciesList.load_file` if the format is unknown
- Change the format of the start time in the AsciiDoc output from _12:30_ to _12:30 Uhr_